--- a/index.html
+++ b/index.html
@@ -20,21 +20,25 @@
 
                 <ul>
                     <li>
-                        <a href="#">Link1</a>
+                        <a href="https://github.com/brunorazevedo" target="_blank">Github</a>
                     </li>
 
                     <li>
-                        <a href="#">Link1</a>
+                        <a href="https://www.linkedin.com/in/bruno-ribeiro-860056187/" target="_blank">Linkedin</a>
                     </li>
 
                     <li>
-                        <a href="#">Link1</a>
+                        <a href="https://www.linkedin.com/in/bruno-ribeiro-860056187/" target="_blank">Instagram</a>
                     </li>
 
                     <li>
-                        <a href="#">Link1</a>
+                        <a href="https://pt-br.facebook.com/azevedobrunoribeiro" target="_blank">Facebook</a>
                     </li>
                 </ul>
+
+                <footer>
+                    <p>Acesse minhas redes sociais</p>
+                </footer>
         </div>
 </body>
 
