--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Link-Tree Perfil</title>
 </head>
@@ -14,7 +14,7 @@
 
             <div class="container">
 
-                <img class="avatar" src="/assets/foto.png" alt="">
+                <img class="avatar" src="./assets/foto.png" alt="">
                 <h3>Bruno Ribeiro</h3>
                 <p>@brunoribazevedo</p>
 
