--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </li>
 
                     <li>
-                        <a href="https://www.linkedin.com/in/bruno-ribeiro-860056187/" target="_blank">Instagram</a>
+                        <a href="https://www.instagram.com/brunoribazevedo/" target="_blank">Instagram</a>
                     </li>
 
                     <li>
